objects/Pharmacy_Upsell_Details__c.object
<CustomObject>
    <description>This object will track details specific to Pharmacy Benefits.</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account Legal Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Pharmacy_Upsell_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BPL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Proxy ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Basic_AKA_Standard_DUR__c</fullName>
        <inlineHelpText>Include Step Therap, Prior Authorization, Dose Optimization &amp; Quantity &amp; Safety on all Rx, EXCEPT Specialty</inlineHelpText>
        <label>Basic AKA Standard DUR</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Does not apply</fullName>
                </value>
                <value>
                    <fullName>Applies</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Benefit_Contract_Count__c</fullName>
        <label>Benefit Contract Count</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Benefit_Member_Count__c</fullName>
        <label>Benefit Member Count</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Benefit_Status__c</fullName>
        <label>Benefit Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Termed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comprehensive_Only__c</fullName>
        <inlineHelpText>Includes Basic &amp; Moderate above + Clinically Equivalent Rx &amp; Preferred Generics (Member &amp; Provider) - edits include Step Therapy, Prior Authorization, Dose Optimization &amp; Quantity &amp; Safety on all Rx EXCEPT Specialty.</inlineHelpText>
        <label>Comprehensive Only</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Does not apply</fullName>
                </value>
                <value>
                    <fullName>Applies</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Coverage_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Coverage Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Exclusive_Specialty_Implemented__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Exclusive Specialty Implemented</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Exclusive_Specialty_Recommended__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Exclusive Specialty Recommended</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Medical_Lockout_Implemented__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Medical Lockout Implemented</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Medical_Lockout_Recommended__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Medical Lockout Recommended</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Prior_Authorization_Implemented__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Prior Authorization Implemented</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Prior_Authorization_Recommended__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Prior Authorization Recommended</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Split_fill_benefit_Implemented__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Split-fill benefit Implemented</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Step_Therapy_Implemented__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Step Therapy Implemented</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Step_Therapy_Recommended__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Step Therapy Recommended</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exclusive_Specialty_Reason_for_Denial__c</fullName>
        <label>Exclusive Specialty Reason for Denial</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Union group</fullName>
                </value>
                <value>
                    <fullName>Had program and removed</fullName>
                </value>
                <value>
                    <fullName>Not a cultural fit</fullName>
                </value>
                <value>
                    <fullName>Los savings</fullName>
                </value>
                <value>
                    <fullName>Not allowed to present</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Home_Delivery_Current_Benefit__c</fullName>
        <label>Home Delivery Current Benefit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Choice</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Preferred</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Home_Delivery_Reason_for_Denial__c</fullName>
        <label>Home Delivery Reason for Denial</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Union group</fullName>
                </value>
                <value>
                    <fullName>Had program and removed</fullName>
                </value>
                <value>
                    <fullName>Not a cultural fit</fullName>
                </value>
                <value>
                    <fullName>Low savings</fullName>
                </value>
                <value>
                    <fullName>Not allowed to present</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Home_Delivery_Recommended__c</fullName>
        <label>Home Delivery Recommended</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Choice</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Preferred</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mail_Member_Contribution_Type__c</fullName>
        <label>Mail Member Contribution Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Coinsurance</fullName>
                </value>
                <value>
                    <fullName>Tiered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medical_Lockout_Current_Benefit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Medical Lockout Current Benefit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Medical_Lockout_Reason_for_Denial__c</fullName>
        <label>Medical Lockout Reason for Denial</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Union group</fullName>
                </value>
                <value>
                    <fullName>Had program and removed</fullName>
                </value>
                <value>
                    <fullName>Not a cultural fit</fullName>
                </value>
                <value>
                    <fullName>Low savings</fullName>
                </value>
                <value>
                    <fullName>Not allowed to present</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Moderate_Edits_Current_Benefit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Moderate Edits Current Benefit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Moderate_Edits_Implementation_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Applicable for National Accounts Only.</inlineHelpText>
        <label>Moderate Edits Implementation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Moderate_Edits_Reason_for_Denial_Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Applicable for National Accounts Only.</inlineHelpText>
        <label>Moderate Edits Reason for Denial Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Moderate_Edits_Reason_for_Denial__c</fullName>
        <inlineHelpText>Applicable for National Accounts Only.</inlineHelpText>
        <label>Moderate Edits Reason for Denial</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Union group</fullName>
                </value>
                <value>
                    <fullName>Had program and removed</fullName>
                </value>
                <value>
                    <fullName>Not a cultural fit</fullName>
                </value>
                <value>
                    <fullName>Low savings</fullName>
                </value>
                <value>
                    <fullName>Not allowed to present</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Moderate_Edits_Recommended_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Applicable for National Accounts Only.</inlineHelpText>
        <label>Moderate Edits Recommended Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Moderate_Edits_Recommended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Moderate Edits Recommended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Pharmacy_Upsell_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Package_Reason_for_Denial_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Package Reason for Denial Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Package_Reason_for_Denial__c</fullName>
        <inlineHelpText>Applicable for National Accounts Only.</inlineHelpText>
        <label>Package Reason for Denial</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Union group</fullName>
                </value>
                <value>
                    <fullName>Had program and removed</fullName>
                </value>
                <value>
                    <fullName>Not a cultural fit</fullName>
                </value>
                <value>
                    <fullName>Low Savings</fullName>
                </value>
                <value>
                    <fullName>Not allowed to present</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Package_Recommended_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Applicable for National Accounts Only.</inlineHelpText>
        <label>Package Recommended Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Package_Recommended__c</fullName>
        <inlineHelpText>Applicable for National Accounts Only.</inlineHelpText>
        <label>Package Recommended</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Basic</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>Comprehensive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preventive_Drug_List_Select_Applicable__c</fullName>
        <inlineHelpText>If a preventive drug list does apply ($  copay bypass deductible is standard), SELECT ALL options that will apply to the application of that drug list if non-standard.</inlineHelpText>
        <label>Preventive Drug List (Select Applicable)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Does not apply</fullName>
                </value>
                <value>
                    <fullName>Apply Deductive for Preventive RX</fullName>
                </value>
                <value>
                    <fullName>Basic</fullName>
                </value>
                <value>
                    <fullName>Basic Plus</fullName>
                </value>
                <value>
                    <fullName>Copay Applies</fullName>
                </value>
                <value>
                    <fullName>Copay does not Apply</fullName>
                </value>
                <value>
                    <fullName>Expanded</fullName>
                </value>
                <value>
                    <fullName>Preventive Expanded (Empire ONLY)</fullName>
                </value>
                <value>
                    <fullName>Preventive Expanded + Asthma (ACES ONLY)</fullName>
                </value>
                <value>
                    <fullName>Preventive Rx Plus</fullName>
                </value>
                <value>
                    <fullName>Waive Deductible for Preventive RX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preventive_List__c</fullName>
        <label>Rx Preventive List</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Does not apply</fullName>
                </value>
                <value>
                    <fullName>Apply Deductive for Peventive RX</fullName>
                </value>
                <value>
                    <fullName>Basic</fullName>
                </value>
                <value>
                    <fullName>Basic Plus</fullName>
                </value>
                <value>
                    <fullName>Copay Applies</fullName>
                </value>
                <value>
                    <fullName>Copay does not Apply</fullName>
                </value>
                <value>
                    <fullName>Expanded</fullName>
                </value>
                <value>
                    <fullName>Preventive Expanded (Empire ONLY)</fullName>
                </value>
                <value>
                    <fullName>Preventive Expanded + Asthma (ACES ONLY)</fullName>
                </value>
                <value>
                    <fullName>Preventive Rx Plus</fullName>
                </value>
                <value>
                    <fullName>Waive Deductible for Preventive RX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prior_Authorization_Current_Benefit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prior Authorization Current Benefit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prior_Authorization_Reason_for_Denial__c</fullName>
        <label>Prior Authorization Reason for Denial</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Union group</fullName>
                </value>
                <value>
                    <fullName>Had program and removed</fullName>
                </value>
                <value>
                    <fullName>Not a cultural fit</fullName>
                </value>
                <value>
                    <fullName>Low savings</fullName>
                </value>
                <value>
                    <fullName>Not allowed to present</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RX_Formulary__c</fullName>
        <inlineHelpText>LIST OF DRUGS THAT ARE COVERED BY THE BENEFIT</inlineHelpText>
        <label>RX Formulary</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>National - Traditional</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>Essential</fullName>
                </value>
                <value>
                    <fullName>Select</fullName>
                </value>
                <value>
                    <fullName>Generic Premium</fullName>
                </value>
                <value>
                    <fullName>Generic Only</fullName>
                </value>
                <value>
                    <fullName>National - Plus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retail_Member_Contribution_Type__c</fullName>
        <inlineHelpText>Select both options if both apply.</inlineHelpText>
        <label>Retail Member Contribution Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Coinsurance</fullName>
                </value>
                <value>
                    <fullName>Tiered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rx_Benefit_Tiers__c</fullName>
        <label>Rx Benefit Tiers</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>&gt;4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rx_Benefit_Type__c</fullName>
        <label>Rx Benefit Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>CDHP-HRA</fullName>
                </value>
                <value>
                    <fullName>CDHP-HSA</fullName>
                </value>
                <value>
                    <fullName>CDHP-HIA</fullName>
                </value>
                <value>
                    <fullName>Med D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rx_DIV__c</fullName>
        <label>Rx DIV/CAG</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>WL2</fullName>
                </value>
                <value>
                    <fullName>WL3</fullName>
                </value>
                <value>
                    <fullName>WL4</fullName>
                </value>
                <value>
                    <fullName>WL5</fullName>
                </value>
                <value>
                    <fullName>WL6</fullName>
                </value>
                <value>
                    <fullName>WL7</fullName>
                </value>
                <value>
                    <fullName>WL8</fullName>
                </value>
                <value>
                    <fullName>WL9</fullName>
                </value>
                <value>
                    <fullName>WLA</fullName>
                </value>
                <value>
                    <fullName>WLB</fullName>
                </value>
                <value>
                    <fullName>WLD</fullName>
                </value>
                <value>
                    <fullName>WLE</fullName>
                </value>
                <value>
                    <fullName>WLF</fullName>
                </value>
                <value>
                    <fullName>WLH</fullName>
                </value>
                <value>
                    <fullName>WFH</fullName>
                </value>
                <value>
                    <fullName>WVE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rx_Network_Current__c</fullName>
        <label>Rx Network Current</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>Rx Choice Tiered</fullName>
                </value>
                <value>
                    <fullName>Retail90</fullName>
                </value>
                <value>
                    <fullName>Rx Maintenance90</fullName>
                </value>
                <value>
                    <fullName>Home Delivery Complete</fullName>
                </value>
                <value>
                    <fullName>Home Delivery Choice</fullName>
                </value>
                <value>
                    <fullName>National Plus</fullName>
                    <isActive>false</isActive>
                    <label>National Plus</label>
                </value>
                <value>
                    <fullName>R90</fullName>
                    <isActive>false</isActive>
                    <label>R90</label>
                </value>
                <value>
                    <fullName>Rx Choice Tiered Network</fullName>
                    <isActive>false</isActive>
                    <label>Rx Choice Tiered Network</label>
                </value>
                <value>
                    <fullName>S90</fullName>
                    <isActive>false</isActive>
                    <label>S90</label>
                </value>
                <value>
                    <fullName>S90 Walgreens</fullName>
                    <isActive>false</isActive>
                    <label>S90 Walgreens</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rx_Network_Reason_for_Denial__c</fullName>
        <label>Rx Network Reason for Denial</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Union group</fullName>
                </value>
                <value>
                    <fullName>Had program and removed</fullName>
                </value>
                <value>
                    <fullName>Not a cultural fit</fullName>
                </value>
                <value>
                    <fullName>Low savings</fullName>
                </value>
                <value>
                    <fullName>Not allowed to present</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rx_Network_Recommended__c</fullName>
        <label>Rx Network Recommended</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rx Tiered Choice</fullName>
                </value>
                <value>
                    <fullName>R90</fullName>
                </value>
                <value>
                    <fullName>S90</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rx_Options_Current_Package__c</fullName>
        <inlineHelpText>Applicable for National Accounts Only.</inlineHelpText>
        <label>Rx Options Current Package</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Basic</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>Comprehensive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rx_Options_Package_Implementation_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Applicable for National Accounts Only.</inlineHelpText>
        <label>Rx Options Package Implementation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SFDCLegacyID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SFDCLegacyID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specialty_Member_Contribution_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Specialty Member Contribution Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specialty_Package_Current_Benefit__c</fullName>
        <inlineHelpText>Only active when Rx Options Current Package selected</inlineHelpText>
        <label>Specialty Package Current Benefit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Specialty_Package_Reason_for_Denial__c</fullName>
        <label>Specialty Package Reason for Denial</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Union group</fullName>
                </value>
                <value>
                    <fullName>Had program and removed</fullName>
                </value>
                <value>
                    <fullName>Not a cultural fit</fullName>
                </value>
                <value>
                    <fullName>Low savings</fullName>
                </value>
                <value>
                    <fullName>Not allowed to present</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Specialty_Package_Recommended__c</fullName>
        <inlineHelpText>Only active when package recommended</inlineHelpText>
        <label>Specialty Package Recommended</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Specialty_Rx_Current_Benefit__c</fullName>
        <label>Specialty Rx Current Benefit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Exclusive</fullName>
                </value>
                <value>
                    <fullName>Voluntary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Specialty_Rx_Reason_for_Denial__c</fullName>
        <label>Specialty Rx Reason for Denial</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Union group</fullName>
                </value>
                <value>
                    <fullName>Had program and removed</fullName>
                </value>
                <value>
                    <fullName>Not a cultural fit</fullName>
                </value>
                <value>
                    <fullName>Low savings</fullName>
                </value>
                <value>
                    <fullName>Not allowed to present</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Specialty_Rx_Recommended__c</fullName>
        <label>Specialty Rx Recommended</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Exclusive</fullName>
                </value>
                <value>
                    <fullName>Voluntary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Split_fill_Benefit_Reason_for_Denial__c</fullName>
        <label>Split-fill  Benefit Reason for Denial</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Union group</fullName>
                </value>
                <value>
                    <fullName>Had program and removed</fullName>
                </value>
                <value>
                    <fullName>Not a cultural fit</fullName>
                </value>
                <value>
                    <fullName>Low savings</fullName>
                </value>
                <value>
                    <fullName>Not allowed to present</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>